finish html, css mobile

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </div>
 
     <div class="main-advantages">
-      Unlimited websites
-      100% data ownership
-      Email reports
+      <span>Unlimited websites</span>
+      <span>100% data ownership</span>
+      <span>Email reports</span>
     </div>
 
     <button type="button">Start my trial</button>
@@ -57,7 +57,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/eike3237">Your Name Here</a>.
+    Coded by <a href="https://github.com/eike3237">Eike Souza</a>.
   </div>
 
   
