slider with color + some emot

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="main">
     <div class="main-slideContainer">
       <span id="pageview">100 K PAGEVIEWS</span>
-      <input type="range" min="1" max="100" value="50" class="slider" id="price"/>
+      <input type="range" min="1" max="100" value="50" class="slider" id="MyRange"/>
     </div>
     
     <div class="main-priceSelected" style="display: flex;
@@ -47,9 +47,9 @@
     </div>
 
     <div class="main-advantages">
-      <span>Unlimited websites</span>
-      <span>100% data ownership</span>
-      <span>Email reports</span>
+      <span class="adv0">Unlimited websites</span>
+      <span class="adv1">100% data ownership</span>
+      <span class="adv2">Email reports</span>
     </div>
 
     <button type="button">Start my trial</button>
