Js functions finished

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <div class="main-priceSelected" style="display: flex;
     flex-direction: row;">
-      <div class="main-priceFeatured">$16.00 </div> / month
+      <div class="main-priceFeatured" id="price">$16.00 </div> / month
     </div>
 
     <div class="main-discount">
