insert alt on image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <div class="content">
-    <img src="images/pattern-circles.svg"/>
+    <img src="images/pattern-circles.svg" alt="circles bakcground"/>
     <div class="title">Simple, traffic-based pricing</div>
     <div class="content-text">
       <p>Sign-up for our 30-day trial. </p>
